--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 install:
   - pip install --upgrade pip
   - pip install -U -r requirements.txt
+  - pip install pep8 pytest-pep8 pytest-xdist
+  - pip install python-coveralls pytest-cov
   - python setup.py install
 
 script:
