--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
+dist: xenial
 language: python
 python:
-  - "3.6"
+  - "3.7"
 
 install:
   - pip install --upgrade pip
   - pip install -U -r requirements.txt
   - pip install pep8 pytest-pep8 pytest-xdist
-  - pip install python-coveralls pytest-cov
+  - pip install python-coveralls pytest-cov pytest-forked
   - python setup.py install
 
 script:
   - pytest --cov=pygk --pep8
+  - python -m unittest pygk.tests.test_all
 
 after_success:
   - coveralls
